# gravity_plane_est

./: CMakeLists.txt  package.xml
cpp/: avg_imu.cpp  find_planes.cpp
cpp/utils/: correct_gravity.cpp  data_conversion.cpp  depthmsg_to_vector.cpp  get_mask.cpp  get_normal.cpp  math_utils.cpp  process_depthmsg.cpp  visualise.cpp
docker/: Dockerfile
launch/: avg_imu.launch  find_planes.launch  find_planes_cpp.launch  find_planes_py.launch
python/: depth_to_pcd.py  find_planes.py  get_mask.py  get_normal.py  gravity_correction.py  hsv.py  test.py  test_surface_form.py
yaml/: find_planes.yaml
